--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "vite build && vite preview",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll --verbose"
   },
   "dependencies": {
     "@radix-ui/themes": "^2.0.0",
@@ -22,7 +23,8 @@
     "mongoose": "^7.6.3",
     "passport": "^0.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
