--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "comp229-milestone",
+  "name": "wizstack",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0b",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"nodemon --watch server --exec node server/server.js\"",
     "start": "vite build && vite preview",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -13,14 +13,9 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^2.0.0",
-    "axios": "^1.6.0",
     "colors": "^1.4.0",
-    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
     "jest": "^29.7.0",
-    "mongodb": "^6.2.0",
-    "mongoose": "^7.6.3",
     "passport": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -30,10 +25,12 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react-swc": "^3.3.2",
+    "concurrently": "^8.2.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "vite": "^4.4.5"
+    "nodemon": "^3.0.1",
+    "vite": "^4.5.0"
   }
 }
