--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^2.0.0",
+    "axios": "^1.6.2",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
