--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
+    "jwt-decode": "^4.0.0",
     "passport": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
