--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^2.0.0",
+    "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "colors": "^1.4.0",
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
     "jwt-decode": "^4.0.0",
     "passport": "^0.6.0",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
@@ -35,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "nodemon": "^3.0.1",
+    "tailwindcss": "^3.3.6",
     "vite": "^4.5.1"
   }
 }
