add 'ForgotPassword', 'ResetPassword' pages add revelant functions in authController

--- a/server/config.env
+++ b/server/config.env
@@ -4,3 +4,8 @@ PORT=3000
 JWT_SECRET=system-high-safe-and-long-secret
 JWT_EXPIRES_IN=90d
 JWT_EXPIRES_IN_FOR_LOGOUT=1000
+
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=587
+EMAIL_USERNAME=4240b6790bf83b
+EMAIL_PASSWORD=98c9c54aeac816
