--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "jest": "^29.7.0",
     "jwt-decode": "^4.0.0",
+    "nodemailer": "^6.9.7",
     "passport": "^0.6.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
