update: package.json

--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.0b",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"vite\" \"nodemon --watch server --exec node server/server.js\"",
-    "prod": "concurrently \"vite\" \"nodemon --watch server --exec node server/server.js\"",
     "start": "vite build && vite preview",
+    "start:backend": "nodemon --watch server --exec node server/server.js",
+    "start:frontend": "vite build && vite preview",
+    "dev": "concurrently \"vite\" \"nodemon --watch server --exec node server/server.js\"",
+    "prod": "concurrently \"vite build\" \"nodemon --watch server --exec node server/server.js\" \"vite preview\"",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
