--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
     "passport": "^0.6.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "wizstack": "file:.."
   }
 }
