--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "wizstack",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.0.0b",
   "type": "module",
   "scripts": {
-    "start:front": "vite",
+    "start": "concurrently \"npm run start:back\" \"npm run start:front\"",
     "start:back": "nodemon server/server.js",
-    "start": "npm run start:front",
+    "start:front": "vite preview",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
