--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite build && vite preview",
     "start:backend": "nodemon --watch server --exec node server/server.js",
-    "start:frontend": "vite build && vite preview",
+    "start:frontend": "vite build && vite preview --port 8080",
     "dev": "concurrently \"vite\" \"nodemon --watch server --exec node server/server.js\"",
     "prod": "concurrently \"vite build\" \"nodemon --watch server --exec node server/server.js\" \"vite preview\"",
     "build": "vite build",
