--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "concurrently \"npm run start:back\" \"npm run start:front\"",
     "start:back": "nodemon server/server.js",
     "start:front": "vite preview",
-    "build": "vite build",
+    "build": "vite build && npm run build:back",
+    "build:back": "cd server && npm install",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "jest --watchAll --verbose"
