Changing localhost to render API deployment

--- a/config.env
+++ b/config.env
@@ -4,3 +4,5 @@ PORT=3000
 JWT_SECRET=system-high-safe-and-long-secret
 JWT_EXPIRES_IN=90d
 JWT_EXPIRES_IN_FOR_LOGOUT=1000
+
+REACT_APP_API_URL=https://api.render.com/deploy/srv-cls1sl7qd2ns73dun2fg?key=ttBTtCjx7fI
